--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "config": "^3.3.6",
+    "json-server": "^0.16.3",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "rxjs": "^7.1.0",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
